tests/ui/transmutability/enums/repr/primitive_reprs_should_have_correct_length.stderr
error[E0277]: `Zst` cannot be safely transmuted into `V0i8` in the defining scope of `n8::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:48:44
   |
LL |         assert::is_transmutable::<Smaller, Current, Context>();
   |                                            ^^^^^^^ The size of `Zst` is smaller than the size of `V0i8`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `V0i8` cannot be safely transmuted into `u16` in the defining scope of `n8::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:50:44
   |
LL |         assert::is_transmutable::<Current, Larger, Context>();
   |                                            ^^^^^^ The size of `V0i8` is smaller than the size of `u16`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `Zst` cannot be safely transmuted into `V0u8` in the defining scope of `n8::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:56:44
   |
LL |         assert::is_transmutable::<Smaller, Current, Context>();
   |                                            ^^^^^^^ The size of `Zst` is smaller than the size of `V0u8`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `V0u8` cannot be safely transmuted into `u16` in the defining scope of `n8::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:58:44
   |
LL |         assert::is_transmutable::<Current, Larger, Context>();
   |                                            ^^^^^^ The size of `V0u8` is smaller than the size of `u16`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `V0i16` in the defining scope of `n16::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:72:44
   |
LL |         assert::is_transmutable::<Smaller, Current, Context>();
   |                                            ^^^^^^^ The size of `u8` is smaller than the size of `V0i16`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `V0i16` cannot be safely transmuted into `u32` in the defining scope of `n16::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:74:44
   |
LL |         assert::is_transmutable::<Current, Larger, Context>();
   |                                            ^^^^^^ The size of `V0i16` is smaller than the size of `u32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `V0u16` in the defining scope of `n16::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:80:44
   |
LL |         assert::is_transmutable::<Smaller, Current, Context>();
   |                                            ^^^^^^^ The size of `u8` is smaller than the size of `V0u16`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `V0u16` cannot be safely transmuted into `u32` in the defining scope of `n16::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:82:44
   |
LL |         assert::is_transmutable::<Current, Larger, Context>();
   |                                            ^^^^^^ The size of `V0u16` is smaller than the size of `u32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `u16` cannot be safely transmuted into `V0i32` in the defining scope of `n32::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:96:44
   |
LL |         assert::is_transmutable::<Smaller, Current, Context>();
   |                                            ^^^^^^^ The size of `u16` is smaller than the size of `V0i32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `V0i32` cannot be safely transmuted into `u64` in the defining scope of `n32::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:98:44
   |
LL |         assert::is_transmutable::<Current, Larger, Context>();
   |                                            ^^^^^^ The size of `V0i32` is smaller than the size of `u64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `u16` cannot be safely transmuted into `V0u32` in the defining scope of `n32::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:104:44
   |
LL |         assert::is_transmutable::<Smaller, Current, Context>();
   |                                            ^^^^^^^ The size of `u16` is smaller than the size of `V0u32`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `V0u32` cannot be safely transmuted into `u64` in the defining scope of `n32::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:106:44
   |
LL |         assert::is_transmutable::<Current, Larger, Context>();
   |                                            ^^^^^^ The size of `V0u32` is smaller than the size of `u64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `u32` cannot be safely transmuted into `V0i64` in the defining scope of `n64::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:120:44
   |
LL |         assert::is_transmutable::<Smaller, Current, Context>();
   |                                            ^^^^^^^ The size of `u32` is smaller than the size of `V0i64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `V0i64` cannot be safely transmuted into `u128` in the defining scope of `n64::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:122:44
   |
LL |         assert::is_transmutable::<Current, Larger, Context>();
   |                                            ^^^^^^ The size of `V0i64` is smaller than the size of `u128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `u32` cannot be safely transmuted into `V0u64` in the defining scope of `n64::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:128:44
   |
LL |         assert::is_transmutable::<Smaller, Current, Context>();
   |                                            ^^^^^^^ The size of `u32` is smaller than the size of `V0u64`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `V0u64` cannot be safely transmuted into `u128` in the defining scope of `n64::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:130:44
   |
LL |         assert::is_transmutable::<Current, Larger, Context>();
   |                                            ^^^^^^ The size of `V0u64` is smaller than the size of `u128`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `V0isize` in the defining scope of `nsize::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:144:44
   |
LL |         assert::is_transmutable::<Smaller, Current, Context>();
   |                                            ^^^^^^^ The size of `u8` is smaller than the size of `V0isize`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `V0isize` cannot be safely transmuted into `[usize; 2]` in the defining scope of `nsize::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:146:44
   |
LL |         assert::is_transmutable::<Current, Larger, Context>();
   |                                            ^^^^^^ The size of `V0isize` is smaller than the size of `[usize; 2]`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `u8` cannot be safely transmuted into `V0usize` in the defining scope of `nsize::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:152:44
   |
LL |         assert::is_transmutable::<Smaller, Current, Context>();
   |                                            ^^^^^^^ The size of `u8` is smaller than the size of `V0usize`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error[E0277]: `V0usize` cannot be safely transmuted into `[usize; 2]` in the defining scope of `nsize::Context`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:154:44
   |
LL |         assert::is_transmutable::<Current, Larger, Context>();
   |                                            ^^^^^^ The size of `V0usize` is smaller than the size of `[usize; 2]`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/primitive_reprs_should_have_correct_length.rs:12:14
   |
LL |       pub fn is_transmutable<Src, Dst, Context>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: BikeshedIntrinsicFrom<Src, Context, {
   |  ______________^
LL | |             Assume {
LL | |                 alignment: true,
LL | |                 lifetimes: true,
...  |
LL | |             }
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error: aborting due to 20 previous errors

For more information about this error, try `rustc --explain E0277`.
